// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Input/File Field Default 1`] = `
.c0 label {
  font-family: Muli;
  font-weight: 700;
  font-size: 16px;
  display: block;
  color: #393F50;
}

.c0 .required:after {
  color: #EB4E2C;
  content: "*";
}

.c0 .desc {
  display: inline;
  font-weight: normal;
  font-size: 14px;
  line-height: 18px;
  color: #6F6F6F;
  margin-right: 50px;
}

.c0 .file-input {
  color: transparent;
}

.c0 .file-input::-webkit-file-upload-button {
  visibility: hidden;
}

.c0 .file-input::before {
  content: "Pilih Foto";
  font-family: Muli;
  font-size: 16px;
  font-weight: 700;
  color: #00239D;
  cursor: pointer;
  padding: 10px 41px 11px 40px;
  border: 1px solid #00239D;
  border-radius: 50px;
  display: inline-block;
}

.c0 .error {
  font-family: Muli;
  font-weight: 700;
  font-size: 12px;
  display: block;
  color: #EB4E2C;
}

.c0 .name {
  color: #393F50;
}

<div
  className="c0"
>
  <label
    className=""
  >
    Foto Mustahik
  </label>
  <label
    className="desc"
  >
    Unggah foto ukuran 300 x 300 milik mustahik dengan format .jpg
  </label>
  <input
    className="file-input"
    onChange={[Function]}
    type="file"
  />
</div>
`;

exports[`Storyshots Input/File Field Error 1`] = `
.c0 label {
  font-family: Muli;
  font-weight: 700;
  font-size: 16px;
  display: block;
  color: #393F50;
}

.c0 .required:after {
  color: #EB4E2C;
  content: "*";
}

.c0 .desc {
  display: inline;
  font-weight: normal;
  font-size: 14px;
  line-height: 18px;
  color: #6F6F6F;
  margin-right: 50px;
}

.c0 .file-input {
  color: transparent;
}

.c0 .file-input::-webkit-file-upload-button {
  visibility: hidden;
}

.c0 .file-input::before {
  content: "Pilih Foto";
  font-family: Muli;
  font-size: 16px;
  font-weight: 700;
  color: #00239D;
  cursor: pointer;
  padding: 10px 41px 11px 40px;
  border: 1px solid #00239D;
  border-radius: 50px;
  display: inline-block;
}

.c0 .error {
  font-family: Muli;
  font-weight: 700;
  font-size: 12px;
  display: block;
  color: #EB4E2C;
}

.c0 .name {
  color: #393F50;
}

<div
  className="c0"
>
  <label
    className=""
  >
    Foto Mustahik
  </label>
  <label
    className="desc"
  >
    Unggah foto ukuran 300 x 300 milik mustahik dengan format .jpg
  </label>
  <input
    className="file-input"
    onChange={[Function]}
    type="file"
  />
  <span
    className="error"
  >
    Ukuran foto yang diunggah tidak sesuai
  </span>
</div>
`;

exports[`Storyshots Input/File Field Required 1`] = `
.c0 label {
  font-family: Muli;
  font-weight: 700;
  font-size: 16px;
  display: block;
  color: #393F50;
}

.c0 .required:after {
  color: #EB4E2C;
  content: "*";
}

.c0 .desc {
  display: inline;
  font-weight: normal;
  font-size: 14px;
  line-height: 18px;
  color: #6F6F6F;
  margin-right: 50px;
}

.c0 .file-input {
  color: transparent;
}

.c0 .file-input::-webkit-file-upload-button {
  visibility: hidden;
}

.c0 .file-input::before {
  content: "Pilih Foto";
  font-family: Muli;
  font-size: 16px;
  font-weight: 700;
  color: #00239D;
  cursor: pointer;
  padding: 10px 41px 11px 40px;
  border: 1px solid #00239D;
  border-radius: 50px;
  display: inline-block;
}

.c0 .error {
  font-family: Muli;
  font-weight: 700;
  font-size: 12px;
  display: block;
  color: #EB4E2C;
}

.c0 .name {
  color: #393F50;
}

<div
  className="c0"
>
  <label
    className="required"
  >
    Foto Mustahik
  </label>
  <label
    className="desc"
  >
    Unggah foto ukuran 300 x 300 milik mustahik dengan format .jpg
  </label>
  <input
    className="file-input"
    onChange={[Function]}
    type="file"
  />
</div>
`;
